[tool.poetry]
name = "fastapi-learn"
version = "0.1.0"
description = ""
authors = ["daniel <daniel.zhanbolotov@uwis.edu.kg>"]
readme = "README.md"
packages = [{include = "fastapi_learn"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.2"
pycryptodome = "^3.17"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
